@@ -180,6 +180,12 @@ class ConnectionTests(unittest.TestCase):
             with self.assertRaises(sqlite.OperationalError):
                 cx.execute('insert into test(id) values(1)')
 
+    def CheckSameThreadErrorOnOldVersion(self):
+        if sqlite.sqlite_version_info >= (3, 3, 1):
+            self.skipTest('test needs sqlite3 versions older than 3.3.1')
+        with self.assertRaises(sqlite.NotSupportedError) as cm:
+            sqlite.connect(':memory:', check_same_thread=False)
+        self.assertEqual(str(cm.exception), 'shared connections not available')
 
 class CursorTests(unittest.TestCase):
     def setUp(self):
